# CR3Converter

./: .gitignore  CMakeLists.txt  Readme.md  Readme.txt  compile_commands.json  imgui.ini
include/Components/: Image.hpp
include/Core/: Errors.hpp  GUI.hpp  ImageProcessor.hpp  Window.hpp
include/Windows/: ImagesWindow.hpp
samples/: IMG_1481.CR3.pp3  IMG_1482.CR3.pp3
src/: GUI.cpp  ImageProcessor.cpp  ImagesWindow.cpp  Window.cpp  glad.c  main.cpp
